--- a/COntact.html
+++ b/COntact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,118 +8,123 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-imageu">
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning py-4">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-             <a class="nav-link" href="Restaurant.html">Restaurant</a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" href="Menu.html">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Pictures.html">Galerie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="biomarket.html">BioMarket</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="COntact.html">Contact</a>
-          </li> 
-        </ul>
-      </div>
-    </div>
-  </nav>
-      <div class="container panel panel-default mt-4 mb-4">
-        <div class="panel-heading">
-          <h3 class="panel-title text-warning">Réservation</h3>
-        </div>
-        <div class="panel-body">
-          <form>
-            <div class="form-group text-warning">
-              <label for="date">Date :</label>
-              <input type="date" class="form-control" id="date" placeholder="Date">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning py-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Restaurant.html">Restaurant</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Pictures.html">Galerie</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="biomarket.html">BioMarket</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="COntact.html">Contact</a>
+                    </li>
+                </ul>
             </div>
-            <div class="form-group text-warning">
-              <label for="time">Heure :</label>
-              <input type="time" class="form-control" id="time" placeholder="Heure">
-            </div>
-            <div class="form-group text-warning">
-              <label for="people">Nombre de personnes :</label>
-              <input type="number" class="form-control" id="people" placeholder="Nombre de personnes">
-            </div>
-            <button type="submit" class="btn btn-primary">Réserver</button>
-          </form>
         </div>
-      </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1 class="text-warning">Contact</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <h2 class="text-warning">Formulaire de contact</h2>
-        <form>
-          <div class="form-group text-warning">
-            <label for="firstname">Prénom :</label>
-            <input type="text" class="form-control" id="firstname" placeholder="Prénom">
-          </div>
-          <div class="form-group text-warning">
-            <label for="lastname">Nom :</label>
-            <input type="text" class="form-control" id="lastname" placeholder="Nom">
-          </div>
-          <div class="form-group text-warning">
-            <label for="email">Adresse e-mail :</label>
-            <input type="email" class="form-control" id="email" placeholder="Adresse e-mail">
-          </div>
-          <div class="form-group text-warning">
-            <label for="subject">Sujet :</label>
-            <select id="subject" class="form-control">
-              <option value="Suggestion">Suggestion</option>
-              <option value="Problème technique">Allergies</option>
-              <option value="Demande de renseignement">Demande de renseignement</option>
-              <option value="Autre">Autre</option>
-            </select>
-          </div>
-          <div class="form-group text-warning">
-            <label for="message">Message :</label>
-            <textarea class="form-control" id="message" placeholder="Message"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Envoyer</button>
-        </form>
-      </div>
-    </div>
-  </div>
+    </nav>
 
-  <footer>
-    <div class="container-fluid bg-warning">
-      <div class="row">
-        <div class="col text-dark">
-          <a href="#">mention légale</a>
-      </div>
-        <div class="col d-flex justify-content-end">
-          <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
-          <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
+    <div class="container mt-4 mb-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title text-warning">Réservation</h3>
+            </div>
+            <div class="panel-body">
+                <form>
+                    <div class="form-group text-warning">
+                        <label for="date">Date :</label>
+                        <input type="date" class="form-control" id="date" placeholder="Date">
+                    </div>
+                    <div class="form-group text-warning">
+                        <label for="time">Heure :</label>
+                        <input type="time" class="form-control" id="time" placeholder="Heure">
+                    </div>
+                    <div class="form-group text-warning">
+                        <label for="people">Nombre de personnes :</label>
+                        <input type="number" class="form-control" id="people" placeholder="Nombre de personnes">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Réserver</button>
+                </form>
+            </div>
         </div>
-      </div>
     </div>
-  </footer>
 
-  <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-warning">Contact</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="text-warning">Formulaire de contact</h2>
+                <form>
+                    <div class="form-group text-warning">
+                        <label for="firstname">Prénom :</label>
+                        <input type="text" class="form-control" id="firstname" placeholder="Prénom">
+                    </div>
+                    <div class="form-group text-warning">
+                        <label for="lastname">Nom :</label>
+                        <input type="text" class="form-control" id="lastname" placeholder="Nom">
+                    </div>
+                    <div class="form-group text-warning">
+                        <label for="email">Adresse e-mail :</label>
+                        <input type="email" class="form-control" id="email" placeholder="Adresse e-mail">
+                    </div>
+                    <div class="form-group text-warning">
+                        <label for="subject">Sujet :</label>
+                        <select id="subject" class="form-control">
+                            <option value="Suggestion">Suggestion</option>
+                            <option value="Problème technique">Allergies</option>
+                            <option value="Demande de renseignement">Demande de renseignement</option>
+                            <option value="Autre">Autre</option>
+                        </select>
+                    </div>
+                    <div class="form-group text-warning">
+                        <label for="message">Message :</label>
+                        <textarea class="form-control" id="message" placeholder="Message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Envoyer</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
+    <footer>
+        <div class="container-fluid bg-warning">
+            <div class="row">
+                <div class="col text-dark">
+                    <a href="#">mention légale</a>
+                </div>
+                <div class="col d-flex justify-content-end">
+                    <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+                    <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
