--- a/Menu.html
+++ b/Menu.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning py-4">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning py-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -23,10 +23,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="Restaurant.html">Restaurant</a>
+            <a class="nav-link" href="Restaurant.html">Restaurant</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="Menu.html">Menu</a>  
+            <a class="nav-link" href="Menu.html">Menu</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Pictures.html">Galerie</a>
@@ -37,7 +37,6 @@
           <li class="nav-item">
             <a class="nav-link" href="COntact.html">Contact</a>
           </li>
-         
         </ul>
       </div>
     </div>
@@ -49,27 +48,24 @@
 
     <div class="container text-light">
       <div class="row">
-        <div class="col">
-
+        <div class="col-md-6">
           <div>
             <h3>Menu Taïsho <span class="badge rounded-pill bg-light text-dark">30 e.</span></h3>
-            <p></p>
             <ul>
-              <p>STARTER</p>
-              <p>ASSORTED STARTERS</p>
-              <p>前菜の盛り合わせ</p>
-              <p>CHEF’S SPECIAL</p>
-              <p>本⽇のスペシャル</p>
-              <p>TODAY’S MAIN DISH 1</p>
-              <p>本⽇のメニュー1</p>
-              <p>TODAY’S MAIN DISH 2 </p>
-              <p>本⽇のメニュー2</p>
-              <p>+ RICE, MISO SOUP</p>
+              <li>STARTER</li>
+              <li>ASSORTED STARTERS</li>
+              <li>前菜の盛り合わせ</li>
+              <li>CHEF’S SPECIAL</li>
+              <li>本⽇のスペシャル</li>
+              <li>TODAY’S MAIN DISH 1</li>
+              <li>本⽇のメニュー1</li>
+              <li>TODAY’S MAIN DISH 2</li>
+              <li>本⽇のメニュー2</li>
+              <li>+ RICE, MISO SOUP</li>
             </ul>
           </div>
-
         </div>
-        <div class="col">
+        <div class="col-md-6">
           <div>
             <img class="img-fluid border" src="images/highball.jpg" alt="highball et légumes frit">
           </div>
@@ -77,22 +73,20 @@
       </div>
       <br>
       <br>
-      <br>
-      <br>
       <div class="row">
-        <div class="col">
+        <div class="col-md-6">
           <div>
             <img class="img-fluid border" src="images/menu2.jpg" alt="riz et scampis frit">
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-6">
           <div>
             <h3>P'tit menu de la geisha <span class="badge rounded-pill bg-light text-dark"> 20 e.</span></h3>
             <ul>
-              <p>STARTER</p>
-              <p>ASSORTED STARTERS</p>
-              <p>前菜の盛り合わせ</p>
-              <p>Assortiment Yakitori</p>
+              <li>STARTER</li>
+              <li>ASSORTED STARTERS</li>
+              <li>前菜の盛り合わせ</li>
+              <li>Assortiment Yakitori</li>
             </ul>
           </div>
         </div>
@@ -104,14 +98,19 @@
         <div class="row">
           <div class="col text-dark">
             <a href="#">mention légale</a>
-        </div>
+          </div>
           <div class="col d-flex justify-content-end">
-            <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
-            <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
+            <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
           </div>
         </div>
       </div>
     </footer>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
