--- a/Restaurant.html
+++ b/Restaurant.html
@@ -21,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="Restaurant.html">Restaurant</a>  
+            <a class="nav-link" href="Restaurant.html">Restaurant</a>  
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Menu.html">Menu</a>
@@ -41,7 +41,7 @@
   </nav>
 
   <div class="container mt-4 text-light">
-    <div class="col text-center">
+    <div class="text-center">
       <h1 class="text-dark"><strong>Chez Vous !</strong></h1> 
       <h4 class="text-warning">Le Restaurant</h4>
       <br>
@@ -50,47 +50,43 @@
       Découvrez une immersion authentique dans la culture culinaire du Japon au cœur de votre ville.</strong></p>
     </div>
     <div class="row">
-      <div class="col-3 offset-1 mb-4 mt-4">
+      <div class="col-md-4 mb-4 mt-4">
         <h4 class="text-dark">Le restaurant</h4>
         <ul>
           <li class="text-light"><strong>Lundi - Vendredi</strong> : 12:00 - 14:30, 18:30 - 22:30</li>
-            <li class="text-light"><strong>Samedi :</strong>18:30 - 23:00</li>
-           <li class="text-light"><strong>Dimanche :</strong>Fermé</li> 
+          <li class="text-light"><strong>Samedi :</strong>18:30 - 23:00</li>
+          <li class="text-light"><strong>Dimanche :</strong>Fermé</li> 
         </ul>
-        <br>
         <br>
         <h4 class="text-dark">Le biomarket</h4>
         <ul>
-        <li class="text-light"><strong>Lundi - Vendredi</strong> : 08:00 - 20:00</li>
-        <li class="text-light"><strong>Samedi</strong> : 08:00 - 19:00</li>
-        <li class="text-light"><strong>Dimanche :</strong>Fermé</li>
-       </ul>
+          <li class="text-light"><strong>Lundi - Vendredi</strong> : 08:00 - 20:00</li>
+          <li class="text-light"><strong>Samedi</strong> : 08:00 - 19:00</li>
+          <li class="text-light"><strong>Dimanche :</strong>Fermé</li>
+        </ul>
       </div>
-      <div class="col">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5038.456172626837!2d4.354853376085388!3d50.845460458844485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fd1d960c1%3A0xcbd18b1ea8412062!2sBeCode%20Brussels!5e0!3m2!1sfr!2sbe!4v1717499903360!5m2!1sfr!2sbe" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <p class="text-warning">N'hésitez pas à regarder nos plats via notre <a href="Pictures.html">galerie</a>.</p>
-      <br>
-      <br>
-      <br>
-    </div>
+      <div class="col-md-8">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5038.456172626837!2d4.354853376085388!3d50.845460458844485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fd1d960c1%3A0xcbd18b1ea8412062!2sBeCode%20Brussels!5e0!3m2!1sfr!2sbe!4v1717499903360!5m2!1sfr!2sbe" width="100%" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p class="text-warning mt-4">N'hésitez pas à regarder nos plats via notre <a href="Pictures.html">galerie</a>.</p>
+      </div>
     </div>
   </div>
 
-  <footer>
+  <footer class="mt-4">
     <div class="container-fluid bg-warning">
       <div class="row">
         <div class="col text-dark">
           <a href="#">mention légale</a>
-      </div>
+        </div>
         <div class="col d-flex justify-content-end">
-          <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
-          <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
+          <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+          <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
         </div>
       </div>
     </div>
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
