--- a/biomarket.html
+++ b/biomarket.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,77 +8,81 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
-  <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
-    <div class="container-fluid">
-      <a class="navbar-brand" href="Welcome.html">Chez vous BioMarket</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Paniers de légumes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Notre ferme</a>
-          </li>
-         
-          <li class="nav-item">
-            <a class="nav-link" href="#">Nos produits</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Restaurant.html">Restaurant</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="COntact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-<style>
-    body {
-      background-color: #f5f5f5;
-      font-family: Arial, sans-serif;
-    }
-    .maintenance-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: #666;
-    }
-  </style>
-</head>
+
 <body>
-  <img src="images/biomarketfond.jpg" alt="legume">
-  <div class="maintenance-container">
-    <h1>Page en maintenance</h1>
-    <p>Nous manquons de clous pour les étagères. Merci de votre patience.</p>
-    <div class="spinner-border text-primary" role="status">
-      <span class="sr-only">Chargement...</span>
-    </div>
-  </div>
-
-  <footer>
-    <div class="container-fluid bg-warning">
-      <div class="row">
-        <div class="col text-dark">
-          <a href="#">mention légale</a>
-      </div>
-        <div class="col d-flex justify-content-end">
-          <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
-          <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo" class="bg-images border"></a>
+            <a class="navbar-brand" href="Welcome.html">Chez vous BioMarket</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Paniers de légumes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Notre ferme</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nos produits</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Restaurant.html">Restaurant</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="COntact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
+    </nav>
+
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+        }
+
+        .maintenance-container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: #666;
+        }
+    </style>
+
+    <img src="images/biomarketfond.jpg" alt="Légumes" class="img-fluid">
+
+    <div class="maintenance-container text-light">
+        <h1>Page en maintenance</h1>
+        <p>Nous manquons de clous pour les étagères. Merci de votre patience.</p>
+        <div class="spinner-border text-primary" role="status">
+            <span class="sr-only">Chargement...</span>
+        </div>
     </div>
-  </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <footer>
+        <div class="container-fluid bg-warning">
+            <div class="row">
+                <div class="col text-dark">
+                    <a href="#">Mention légale</a>
+                </div>
+                <div class="col d-flex justify-content-end">
+                    <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+                    <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
+
 </html>
